# timeworks

./: .claudeignore  .gitignore  .prettierrc  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vitest.config.ts
.claude/skills/figma-design/: SKILL.md
.claude/skills/figma-hybrid-page-rebuild/: README.md  SKILL.md  pattern-swaps.json  slot-map.json  template-config.json
.claude/skills/figma-page-to-library/: SKILL.md  component-map.json  ds-config.json  icon-map.json
.claude/skills/figma-remove-auto-layout/: SKILL.md
.claude/skills/figma-selection-to-code/: SKILL.md
.claude/skills/figma-to-code/: SKILL.md
.storybook/: main.ts  preview.ts
apps/tasks-tile-view/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
apps/tasks-tile-view/src/: App.tsx  main.tsx  styles.css  types.ts
apps/tasks-tile-view/src-tauri/: Cargo.toml  tauri.conf.json
apps/tasks-tile-view/src-tauri/capabilities/: default.json
apps/tasks-tile-view/src-tauri/src/: lib.rs  main.rs
scripts/: build-icons.mjs  build-tokens.mjs  regen-figma-page-to-library-maps.mjs  rename-color-vars.mjs
src/: index.css  index.js  index.ts  main.js  main.tsx
src/foundations/: Colors.stories.js  Colors.stories.tsx  Elevation.stories.js  Elevation.stories.tsx  Radius.stories.js  Radius.stories.tsx
src/icons/: names.js  names.ts  registry.js  registry.ts
src/lib/: cn.js  cn.ts
src/showcase/: App.js  App.tsx  Showcase.js  Showcase.tsx
(+338 files in other folders)
