[package]
name = "tasks-tile-view"
version = "0.0.0"
description = "TimeWorks Tasks Tile View desktop app"
authors = ["TimeWorks"]
edition = "2021"

[lib]
name = "tasks_tile_view_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target."cfg(target_os = \"macos\")".dependencies]
window-vibrancy = "0.5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
